**7.2.0 (unreleased)**

**7.1.0 (2015-06-30)**

* Allow constraining versions globally without having to know exactly what will
  be installed by the pip command. :issue:`2731`.

* Accept --no-binary and --only-binary via pip.conf. :issue:`2867`.

* Allow ``--allow-all-external`` within a requirements file.

* Fixed an issue where ``--user`` could not be used when ``--prefix`` was used
  in a distutils configuration file.

* Fixed an issue where the SOABI tags were not correctly being generated on
  Python 3.5.

* Fixed an issue where we were advising windows users to upgrade by directly
  executing pip, when that would always fail on Windows.

* Allow ``~`` to be expanded within a cache directory in all situations.


**7.0.3 (2015-06-01)**

* Fixed a regression where ``--no-cache-dir`` would raise an exception, fixes
  :issue:`2855`.


**7.0.2 (2015-06-01)**

* **BACKWARD INCOMPATIBLE** Revert the change (released in v7.0.0) that
  required quoting in requirements files around specifiers containing
  environment markers. (:pull:`2841`)

* **BACKWARD INCOMPATIBLE** Revert the accidental introduction of support for
  options interleaved with requirements, version specifiers etc in
  ``requirements`` files. (:pull:`2841`)

* Expand ``~`` in the cache directory when caching wheels, fixes :issue:`2816`.

* Use ``python -m pip`` instead of ``pip`` when recommending an upgrade command
  to Windows users.


**7.0.1 (2015-05-22)**

* Don't build and cache wheels for non-editable installations from VCSs.

* Allow ``--allow-all-external`` inside of a requirements.txt file, fixing a
  regression in 7.0.


**7.0.0 (2015-05-21)**

* **BACKWARD INCOMPATIBLE** Removed the deprecated ``--mirror``,
  ``--use-mirrors``, and ``-M`` options.

* **BACKWARD INCOMPATIBLE** Removed the deprecated ``zip`` and ``unzip``
  commands.

* **BACKWARD INCOMPATIBLE** Removed the deprecated ``--no-install`` and
  ``--no-download`` options.
