@@ -11,7 +11,7 @@ def test_download_if_requested(script):
     It should download (in the scratch path) and not install if requested.
     """
     result = script.pip(
-        'install', 'INITools==0.1', '-d', '.', expect_error=True
+        'download', '-d', '.', 'INITools==0.1', expect_error=True
     )
     assert Path('scratch') / 'INITools-0.1.tar.gz' in result.files_created
     assert script.site_packages / 'initools' not in result.files_created
@@ -20,12 +20,12 @@ def test_download_if_requested(script):
 @pytest.mark.network
 def test_download_wheel(script):
     """
-    Test using "pip install --download" to download a *.whl archive.
+    Test using "pip download" to download a *.whl archive.
     FIXME: this test could use a local --find-links dir, but -d with local
            --find-links has a bug https://github.com/pypa/pip/issues/1111
     """
     result = script.pip(
-        'install',
+        'download',
         '-f', 'https://bitbucket.org/pypa/pip-test-package/downloads',
         '-d', '.', 'pip-test-package'
     )
@@ -46,7 +46,7 @@ def test_single_download_from_requirements_file(script):
         INITools==0.1
         """))
     result = script.pip(
-        'install', '-r', script.scratch_path / 'test-req.txt', '-d', '.',
+        'download', '-r', script.scratch_path / 'test-req.txt', '-d', '.',
         expect_error=True,
     )
     assert Path('scratch') / 'INITools-0.1.tar.gz' in result.files_created
@@ -59,7 +59,7 @@ def test_download_should_download_dependencies(script):
     It should download dependencies (in the scratch path)
     """
     result = script.pip(
-        'install', 'Paste[openid]==1.7.5.1', '-d', '.', expect_error=True,
+        'download', 'Paste[openid]==1.7.5.1', '-d', '.', expect_error=True,
     )
     assert Path('scratch') / 'Paste-1.7.5.1.tar.gz' in result.files_created
     openid_tarball_prefix = str(Path('scratch') / 'python-openid-')
@@ -76,7 +76,7 @@ def test_download_wheel_archive(script, data):
     wheel_filename = 'colander-0.9.9-py2.py3-none-any.whl'
     wheel_path = os.path.join(data.find_links, wheel_filename)
     result = script.pip(
-        'install', wheel_path,
+        'download', wheel_path,
         '-d', '.', '--no-deps'
     )
     assert Path('scratch') / wheel_filename in result.files_created
@@ -90,7 +90,7 @@ def test_download_should_download_wheel_deps(script, data):
     dep_filename = 'translationstring-1.1.tar.gz'
     wheel_path = os.path.join(data.find_links, wheel_filename)
     result = script.pip(
-        'install', wheel_path,
+        'download', wheel_path,
         '-d', '.', '--find-links', data.find_links, '--no-index'
     )
     assert Path('scratch') / wheel_filename in result.files_created
@@ -107,7 +107,7 @@ def test_download_should_skip_existing_files(script):
         """))
 
     result = script.pip(
-        'install', '-r', script.scratch_path / 'test-req.txt', '-d', '.',
+        'download', '-r', script.scratch_path / 'test-req.txt', '-d', '.',
         expect_error=True,
     )
     assert Path('scratch') / 'INITools-0.1.tar.gz' in result.files_created
@@ -121,7 +121,7 @@ def test_download_should_skip_existing_files(script):
 
     # only the second package should be downloaded
     result = script.pip(
-        'install', '-r', script.scratch_path / 'test-req.txt', '-d', '.',
+        'download', '-r', script.scratch_path / 'test-req.txt', '-d', '.',
         expect_error=True,
     )
     openid_tarball_prefix = str(Path('scratch') / 'python-openid-')
@@ -139,7 +139,7 @@ def test_download_vcs_link(script):
     It should allow -d flag for vcs links, regression test for issue #798.
     """
     result = script.pip(
-        'install', '-d', '.', 'git+git://github.com/pypa/pip-test-package.git'
+        'download', '-d', '.', 'git+git://github.com/pypa/pip-test-package.git'
     )
     assert (
         Path('scratch') / 'pip-test-package-0.1.1.zip'
