@@ -1,5 +1,9 @@
 **7.2.0 (unreleased)**
 
+* Implement a top-level pip download command and add a deprecation warning to
+  pip install --download.
+
+
 **7.1.0 (2015-06-30)**
 
 * Allow constraining versions globally without having to know exactly what will
